[package]
name = "rsomics-cell-filter"
version = "0.1.0"
description = "Filter cells by QC metrics — min genes, min UMIs, max mito fraction from a barcode stats TSV"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-cell-filter"
path = "src/main.rs"

[lib]
name = "rsomics_cell_filter"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

